--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ header {
 
 .poke-logo {
   width: 200px;
+  
 
 }
 
@@ -30,6 +31,7 @@ header {
   display: flex;
   justify-content: center;
   margin-top: 20px;
+  
 }
 
 .error-message {
@@ -43,6 +45,7 @@ header {
   margin: 0 8px;
   border: 1px solid #ddd;
   border-radius: 4px;
+
 }
 
 #searchBtn, #prevBtn, #nextBtn, #resetBtn {
@@ -56,13 +59,48 @@ header {
 #searchBtn {
   background-color: #4caf50;
   color: white;
+  size:250px;
+ 
 }
 
 #prevBtn, #nextBtn, #resetBtn {
   background-color: #2196F3;
   color: white;
+  align-items: center;
+  
 }
 
 #searchBtn:hover, #prevBtn:hover, #nextBtn:hover, #resetBtn:hover {
   opacity: 0.8;
+}
+
+.entry p{
+  text-transform: capitalize;
+  text-align: center;
+}
+
+#app {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.entry {
+  cursor: pointer;
+  
+  background-color: #fff;
+  padding: 20px 60px;
+  border-radius: 10px;
+
+  transition: all 0.2s linear;
+}
+
+.entry:hover {
+  -webkit-box-shadow: inset 0px 0px 35px 0px rgba(0,0,0,0.2);
+  -moz-box-shadow: inset 0px 0px 35px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 500px 0px rgba(0,0,0,0.2);
+}
+
+.entry img {
+  width: 100px;
 }
